--- a/css/variables.css
+++ b/css/variables.css
@@ -8,10 +8,12 @@
     /*colors*/
     --color-primary: #68B738;
     --color-primary-hover: #5EAA2F;
+    
     --color-secondary: #F2F2F2;
     --color-secondary-hover: #ebebeb;
 
     --color-border: #E7E7E7;
+    --color-border-hover: #BABABA;
 
     /*text*/
     --color-text: #000;
