--- a/css/styles.css
+++ b/css/styles.css
@@ -428,6 +428,10 @@ h6,
         width: 100%;
         height: 100%;
     }
+    .header-nav [type="checkbox"]#burger {
+        display: none;
+        opacity: 0;                                                 /*!!!!!!!!!!!!!!!!!!!*/
+    }
     .logo {
         height: 37px;
         width: 33px;
